@@ -1,0 +1,5 @@
+context( "diffcall() function testing" )
+
+test_that( "Function arguments are checked correctly", {
+
+})
