@@ -1,0 +1,5 @@
+context( "normalize() function testing" )
+
+test_that( "Function arguments are checked correctly", {
+	#expect_warning( NULL, NULL, NULL )
+})
